# Optimizers

./: .gitignore  CNAME  Function.py  LICENSE  README.md  index.html  main.pyw  optimizers_2d.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  webapp.py
.github/workflows/: ci.yml  deploy.yml  release-build.yml
api/: config.py  deps.py  main.py  registries.py  session.py
api/routers/: functions.py  optimize.py  optimizers.py  schedulers.py
api/schemas/: base.py  common.py  function.py  optimize.py
assets/: AnalysisPage-BD8X66v9.js  AnalysisPage-DSLqC9ti.js  AnalysisPage-qGo5gvyb.js  GalleryPage-BarFaAoX.js  GalleryPage-CKmd8nPJ.js  GalleryPage-CaUrOsLY.js  MainPage-BDtRbcY4.js  MainPage-CNDk1ogb.js  MainPage-CrNiJgt2.js  index--F8FOBgF.css  index-BC9md1Qq.js  index-BMA16vtP.js  index-Chy14xFJ.css  index-D5CJArff.js  plotly-Bew-nMdx.js  plotly-DOuVacTr.js  plotly-DSUy2OBG.js  plotly-Dd0YYAqx.css  plotly-theme-1AnzEPK-.js  plotly-theme-1WkJ8AYi.js  plotly-theme-DA-uwcK_.js  run.worker-CMKUqQsg.js  worker-CKJi-8wq.js
dialogs/: BaseDialog.py  PlotColormapDialog.py  PlotOptimizersDialog.py  PlotRangeDialog.py  PlotTypeDialog.py  __init__.py
graphics/: Graphics.py  MatplotlibCanvas.py  MatplotlibWidget.py  __init__.py
optimizers/: ADOPT.py  ASGD.py  AdEMAMix.py  AdaBelief.py  Adadelta.py  Adafactor.py  Adagrad.py  Adam.py  AdamW.py  Adamax.py  Adan.py  CautiousAdamW.py  LBFGS.py  LevenbergMarquardt.py  Lion.py  MARS.py  Momentum.py  NAdam.py  Nesterov.py  Newton.py  Optimizer.py  Prodigy.py  QuickProp.py  RAdam.py  RMSprop.py  Rprop.py  SGD.py  ScheduleFreeAdamW.py  Shampoo.py  Sophia.py  __init__.py
schedulers/: Constant.py  CosineAnnealing.py  CosineWarmRestarts.py  Cyclical.py  ExponentialDecay.py  InverseTimeDecay.py  LinearDecay.py  Noam.py  OneCycle.py  PolynomialDecay.py  REX.py  Scheduler.py  StepDecay.py  WSD.py  WarmupCosine.py  __init__.py
scripts/: export_golden_fixtures.py  generate_colormaps.py  update-screenshots.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  router.tsx  useUrlStateSync.ts
src/app/layouts/: RootLayout.tsx
src/app/styles/: globals.css
src/entities/analysis/: index.ts  store.ts
src/entities/colormap/: api.ts  index.ts  lib.ts  model.ts
src/entities/optimizer/: api.ts  index.ts  model.ts
src/entities/playback/: index.ts  lib.ts  (+3 more)
tests/: test_api.py  test_function.py  test_function_minima.py  test_optimizers.py  test_schedulers.py
ui_templates/: __init__.py  optimizers_pyqt_ui.ui  plot_cmap_ui.ui  plot_optims_ui.ui  plot_range_ui.ui  plot_type_ui.ui  ui_mainwindow.py  ui_plotcmap.py  ui_plotoptims.py  ui_plotrange.py  ui_plottype.py
utils/: make_readme_images.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/public/: colormaps.json
web/src/: main.tsx
web/src-tauri/: tauri.conf.json
widgets/: OptimizerListItem.py  OptimizerWidget.py  __init__.py
(+248 files in other folders)
