[project]
name = "optimizers"
version = "1.0.0"
description = "Песочница для визуализации градиентных методов нахождения минимума функции"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "EpicDima" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2",
    "pyside6>=6.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
extend-include = ["*.pyw"]
extend-exclude = ["ui_templates", "optimizers_2d.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
