[project]
name = "optimizers"
version = "1.0.0"
description = "Песочница для визуализации градиентных методов нахождения минимума функции"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "EpicDima" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2",
    "pyside6>=6.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "httpx>=0.28",
]

[tool.mypy]
files = ["optimizers", "schedulers", "Function.py", "api"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-include = ["*.pyw"]
extend-exclude = ["ui_templates"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
