[package]
name = "optimizers"
version = "2.0.0"
description = "This is an application for showing how optimization algorithms work."
authors = ["EpicDima"]
license = "Apache-2.0"
repository = "https://github.com/EpicDima/Optimizers"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "optimizers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
